styles/blocks.css
div.blocks {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    margin: 20px 0;
    width: 100%;
}

    .blocks a {
        display: flex;
        flex-grow: 1;
        margin-bottom: 9px;
        text-decoration: none;
    }

        .blocks a:last-child{
            margin-bottom: 0;
        }

    .blocks .block {
        position: relative;
        width: 100%;
        box-sizing: border-box;
        border: 1px solid #e1e7ef;
        padding: 0;
        font-size: 14px;
        color: #444444;
        cursor: pointer;
        border-radius: 2px;
        padding: 9px 14px;
        transition: all ease-out 100ms;
    }

        .block .icon {
            position: absolute;
            top: 9px;
            right: 12px;
            color: #cad4e0;
        }

        .block:hover {
            border: 1px solid #bcbfc4;
        }

        .block .id {
/*            margin-bottom: 16px;*/
            font-weight: 200;
            font-size: 14px;
        }

        .block .name {
            font-weight: 400;
        }

aside.hidden {
    animation: hide-aside 1.6s;
    animation-delay: 150ms;
    animation-fill-mode: forwards;
}

div.container.translated {
    animation: translate-content 1.6s;
    animation-delay: 250ms;
    animation-fill-mode: forwards;
}

div.container.block {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

    div.container.block div.questions {
        width: auto;
        max-width: 550px;
    }

    div.questions a.home{
        text-decoration: none;
        color: #488ee0;
        display: inline-flex;
        margin-left: -7px;
    }

        div.questions a.home:hover span {
            text-decoration: underline;
        }

    div.questions h1 {
        color: #46494d;
        font-size: 24px;
        margin: 36px 0px 42px 0px;
    }

        div.questions h1:first-letter {
            color: #46494d;
        }

    div.container.block div.question_wrapper {
        margin-bottom: 36px;
    }

/*
        div.container.block div.question_wrapper:first-of-type {
            margin-top: 36px;
        }
*/

        div.question_wrapper span {
            font-size: 18px;
            color: #585c60;
        }

        div.question_wrapper label {
            font-size: 16px;
            color: #585c60;
            font-weight: 200;

            margin-left: 11px;
            margin-top: -3px;
        }

        div.question_wrapper .checkbox {
            display: flex;
            flex-flow: row nowrap;
            align-items: center;
            margin-top: 11px;
        }

        div.question_wrapper .checkbox:first-of-type {
            margin-top: 17px;
        }

        div.question_wrapper input[type="text"] {
            display: inline-block;
            width: 2em;
            text-align: center;
            margin-left: 11px;

            border: 0;
            border-bottom: 1px solid #83888e;
            border-radius: 0;
            padding: 0 9px 6px 9px;
            box-sizing: content-box;

            font-size: 16px;
            font-weight: 200;
        }


@keyframes hide-aside {
    0% { left: 0px; }
    100% { left: -260px; }
}

@keyframes translate-content {
    0% { padding-left: 308px; }
    100% { padding-left: 48px; }
}

